# KairosServer

./: CMakeLists.txt  README.md
KairosServer/: CMakeLists.txt
KairosServer/include/Core/: FontManager.hpp  LayerManager.hpp  NetworkManager.hpp  RaylibRenderer.hpp  Server.hpp
KairosServer/include/Graphics/: BatchRenderer.hpp  PrimitiveRenderer.hpp  RenderCommand.hpp  TextRenderer.hpp
KairosServer/include/Network/: Client.hpp  SocketManager.hpp  TCPSocket.hpp  UnixSocket.hpp
KairosServer/include/Utils/: Config.hpp  Logger.hpp  Timer.hpp
KairosServer/src/: main.cpp
KairosServer/src/Core/: CommandProcessor.cpp  FontManager.cpp  LayerManager.cpp  NetworkManager.cpp  RaylibRenderer.cpp  Server.cpp
KairosServer/src/Graphics/: BatchRenderer.cpp  PrimitiveRenderer.cpp  TextRenderer.cpp
KairosServer/src/Network/: Client.cpp  SocketManager.cpp  TCPSocket.cpp  UnixSocket.cpp
KairosServer/src/Utils/: Config.cpp  Logger.cpp  Platform.cpp  Timer.cpp
shared/: CMakeLists.txt
shared/include/: Commands.hpp  Constants.hpp  Protocol.hpp  Types.hpp
shared/src/: Protocol.cpp  Serialization.cpp
